--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -17,7 +17,6 @@ jobs:
         uses: actions/setup-go@v5
         with:
           go-version: '1.23'
-          cache-dependency-path: crawler/go.sum
 
       - name: Install dependencies
         run: |
@@ -26,14 +25,13 @@ jobs:
 
       - name: Lint Go
         run: |
-          # We will add golangci-lint later, for now just go vet
           cd crawler
-          if [ -d . ]; then go vet ./...; fi
+          if [ -f go.mod ]; then go vet ./...; fi
 
       - name: Test Go
         run: |
           cd crawler
-          if [ -d . ]; then go test -v -race -cover ./...; fi
+          if [ -f go.mod ]; then go test -v -race -cover ./...; fi
 
   python-ci:
     name: FastAPI API CI
@@ -45,8 +43,6 @@ jobs:
         uses: actions/setup-python@v5
         with:
           python-version: '3.11'
-          cache: 'pip'
-          cache-dependency-path: api/requirements.txt
 
       - name: Install dependencies
         run: |
