fix(ci): allow pytest to return exit code 5 (no tests collected) initially

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -58,4 +58,4 @@ jobs:
       - name: Test with pytest
         run: |
           cd api
-          if [ -d . ]; then pytest; fi
+          if [ -d . ]; then pytest || [ $? -eq 5 ]; fi
